<resources>
    <string name="app_name">SICS Mobile</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_text">Login</string>
    <string name="csc_logo">CSC Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_tasks">Task Management</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_adminPanel">Admin Panel</string>
    <string name="nav_settings">Settings</string>

    <!-- Dots menu -->
    <string name="dots_delegate">Delegate</string>
    <string name="dots_mark_complete">Mark Complete</string>
    <string name="dots_mark_failed">Mark Failed</string>
    <string name="dots_details">Details</string>

    <!-- Popup menu -->
    <string name="popup_delegateList">Delegate task</string>
    <string name="popup_delegateTo">Delegate to\u0020</string>
    <string name="popup_ButtonCancel">Cancel</string>
    <string name="popup_delegateToButton">Delegate</string>
    <string name="popup_details">Task details</string>
    <string name="popup_detailsButton">OK</string>
    <string name="popup_complete">Mark task as complete?</string>
    <string name="popup_completeButton">Complete</string>
    <string name="popup_failed">Mark task as failed?</string>
    <string name="popup_failedButton">Failed</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Home 2</item>
        <item>Home 3</item>
        <item>Home 4</item>
        <item>Home 5</item>
    </string-array>

    <string-array name="IPs">
        <item>192.168.43.197</item>
        <item>88.89.219.196</item>
        <item>10.0.0.60</item>
    </string-array>

    <string name="about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>
