<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp"
        android:layout_width="300dp"
        android:layout_height="104dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/popup_failed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="19dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Notification.Title"
                android:textSize="16sp" />

            <Button
                android:text="@string/popup_failedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/failed_btn"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/CornflowerBlue"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp" />

            <Button
                android:text="@string/popup_ButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelFailed_btn"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="@color/CornflowerBlue"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginStart="68dp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>